[gd_scene load_steps=8 format=3 uid="uid://bogchj2lurtn7"]

[ext_resource type="Script" path="res://tools/editor/CreateDifficultyDialog.gd" id="1"]
[ext_resource type="Theme" uid="uid://4xcdimhfc2hy" path="res://default_theme_tools.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://m8cn3xq4wtxf" path="res://tools/editor/arcade_style.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bohucqss88bjh" path="res://tools/editor/console_style.png" id="4"]
[ext_resource type="Texture2D" uid="uid://74k8memq16u3" path="res://tools/icons/icon_help.svg" id="5"]
[ext_resource type="Script" path="res://tools/editor/controls/HBEditorLineEdit.gd" id="6"]
[ext_resource type="Script" path="res://tools/editor/controls/HBEditorSpinBox.gd" id="7"]

[node name="ConfirmationDialog" type="ConfirmationDialog"]
position = Vector2i(0, 32)
size = Vector2i(465, 300)
visible = true
theme = ExtResource("2")
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = 457.0
offset_bottom = 252.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Difficulty:"

[node name="DifficultySelectOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 5
popup/item_0/text = "Easy"
popup/item_0/id = 0
popup/item_1/text = "Normal"
popup/item_1/id = 1
popup/item_2/text = "Hard"
popup/item_2/id = 2
popup/item_3/text = "Extreme"
popup/item_3/id = 3
popup/item_4/text = "Lunatic"
popup/item_4/id = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CustomDifficultyCheckbox" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Use Custom Difficulty"

[node name="CustomDifficultyLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("6")

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Difficulty rating:"

[node name="StarsSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 10.0
step = 0.001
allow_greater = true
suffix = "stars"
custom_arrow_step = 0.5
script = ExtResource("7")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Chart preset"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
tooltip_text = "Project Heartbeat features two gameplay styles, these two can be mixed but it's not encouraged, you can do this (or change between the two styles) in the layer tab of the editor."
texture = ExtResource("5")
expand_mode = 1

[node name="OptionButton" type="OptionButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
expand_icon = true
selected = 0
item_count = 2
popup/item_0/text = "6 button/arcade style"
popup/item_0/icon = ExtResource("3")
popup/item_0/id = 0
popup/item_1/text = "8 button/console style"
popup/item_1/icon = ExtResource("4")
popup/item_1/id = 1
